default parameters in functions

--- a/functions.html
+++ b/functions.html
@@ -131,11 +131,18 @@
 
 <!--
     Rest Parameters in Functions
+    ****************************
+        - it is used to store the "more" than one value in single argument.
 
+        - "..." called as "spread" operator.
 
-    1) we can take only one spread operator per function
+        - it is introduced in "ES6".
 
-    2) position of spread operator always last in occurances
+        -  we can have only "one" rest parameter per function.
+
+        - the occurance of rest parameter should be "last".
+
+        - The default value of spread parameter is []
 -->
 
 <!--
@@ -143,9 +150,9 @@
     function fun_one(...arg1){
         console.log( arg1 );
     };
-    fun_one("Hello_1","Hello_2");           //['Hello_1', 'Hello_2']
-    fun_one("Hello_1","Hello_2","Hello_3"); //['Hello_1', 'Hello_2', 'Hello_3']
     fun_one();                              //[]
+    fun_one("Hello_1");                     //['Hello_1']
+    fun_one("Hello_1","Hello_2");           //['Hello_1', 'Hello_2']
     fun_one(undefined);                     //[undefined]
     fun_one(undefined,null);                //[undefined, null]
 </script>
@@ -153,68 +160,56 @@
 
 <!--
 <script>
-    function fun_one(...arg1,...arg2){
-
-    }
+    function fun_one(arg1,...arg2){
+        console.log(arg1,arg2);
+    };
+    fun_one();                                      //undefined []
+    fun_one(undefined);                             //undefined []
+    fun_one("Hello_1");                             //Hello_1 []
+    fun_one("Hello_1","Hello_2");                   //Hello_1 ['Hello_2']
+    fun_one("Hello_1","Hello_2","Hello_3");         //Hello_1  ['Hello_2', 'Hello_3']
+    fun_one(undefined,undefined);                   //undefined [undefined]
+    fun_one(null,null);                             //null [null]
 </script>
 -->
 
+
+<!--
 <script>
-    function fun_one(arg2,...arg1){}
+    function fun_one(...arg1,arg2){};               //Uncaught SyntaxError: Rest parameter must be last formal parameter
 </script>
+-->
+
+<!--
+<script>
+    function fun_one(arg3,...arg1,...arg2){}        //Uncaught SyntaxError: Rest parameter must be last formal parameter
+</script>
+-->
 
 
+<!--
+    Default Parameters in Functions
+    *******************************
+        - while defining the functions, we will assign some default values to parameters.
 
+        - This concept introduced in ES6
+-->
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<!--
+<script>
+    function fun_one(arg1="Hello_1",arg2="Hello_2",arg3="Hello_3"){
+        console.log( arg1, arg2, arg3 );
+    };
+    fun_one();                                      //Hello_1 Hello_2 Hello_3
+    fun_one("ReactJS");                             //ReactJS Hello_2 Hello_3
+    fun_one(undefined,undefined,undefined);         //Hello_1 Hello_2 Hello_3
+    fun_one(null,null,null);                        //null null null
+    fun_one(undefined,undefined,"Welcome_3");       //Hello_1 Hello_2 Welcome_3
+</script>
+-->
+<script>
+    function fun_one(arg1){}
+</script>
 
 
 
