--- a/functions.html
+++ b/functions.html
@@ -207,23 +207,132 @@
     fun_one(undefined,undefined,"Welcome_3");       //Hello_1 Hello_2 Welcome_3
 </script>
 -->
+
+<!--
 <script>
-    function fun_one(arg1){}
+    function fun_one(arg1,arg2="Hello_2"){
+        console.log(arg1, arg2);
+    }
+    fun_one();                      //undefined 'Hello_2'
+    fun_one(undefined);             //undefined 'Hello_2'
+    fun_one("Hello_1");             //Hello_1 Hello_2
+    fun_one("null");                //null Hello_2
+    fun_one(undefined,undefined);   //undefined 'Hello_2'
+    fun_one(null,null);             //null null
 </script>
+-->
+
+<!--
+<script>
+    function fun_one(arg1,arg2="Hello_2",...arg3){
+        console.log( arg1, arg2, arg3 );
+    };
+    fun_one();                              //undefined 'Hello_2' []
+    fun_one(undefined,undefined,undefined); //undefined 'Hello_2' [undefined]
+    fun_one(null,null,null);                //null null [null]
+    fun_one("Hello_1",undefined,"Hello_3"); //Hello_1 Hello_2 ['Hello_3']
+</script>
+-->
+
+<!--
+    Arrow Functions
+    ***************
+        - The function without name called as "Anonymous" Function.
+
+        - Anonymous Functions also called as "Arrow" Functions.
+
+        - Arrow Functions behaves like "Callback" Functions.
+
+        - we will represent Arrow Functions with "=>"
+
+        - Arrow Functions introduced in "ES6".
+
+    Syntax:
+    *******
+    1) function definition
+
+    2) function calling
 
 
+    var/let/const variablename = (arg1,arg2,arg3,....arg n)=>{
+        business logic
+    }
+
+    variablename(param1,param2,param3.......param n);
+
+--> 
 
 
+<!---->
 
 
+<!--
+<script>
+    let fun_one = ()=>{
+        return "Hello";
+    }
+
+    console.log( fun_one );         //def
+    console.log( fun_one() );       //Hello
+
+</script>
+-->
 
 
+<!--
+<script>
+    let fun_one = ()=> console.log("Hello");
+
+    fun_one();                      //Hello
+</script>
+-->
 
 
+<!--
+<script>
+    let fun_one = (arg1,arg2,arg3)=>{
+        console.log( arg1, arg2, arg3 );
+    };
+    fun_one("Hello_1","Hello_2","Hello_3");             //Hello_1 Hello_2 Hello_3
+    fun_one();                                          //undefined undefined undefined
+    fun_one(null,null,null);                            //null null null
+</script>
+-->
 
 
+<!--
+<script>
+   let fun_one = (arg1, arg2, arg3)=>{
+    console.log( arg1(), arg2(), arg3()  );
+   };
+   fun_one( ()=>{
+       return "Hello_1";
+   }, ()=>{
+       return "Hello_2";
+   }, ()=>{
+       return "Hello_3";
+   } );                                         //Hello_1 Hello_2 Hello_3
+</script>
+-->
 
 
+<script>
+    let initilize = (user,getElementsByEmail,getElementsById)=>{
+        console.log(user, getElementsByEmail(), getElementsById() );              
+    };
+
+
+    let getElementsByEmail = ()=>{
+        return "hr@ashokit.in";
+    }
+
+    let getElementsById = ()=>{
+        return "AshokIT";
+    };
+
+    initilize("Hello_1",getElementsByEmail,getElementsById);                //Hello_1 hr@ashokit.in AshokIT
+
+</script>
 
 
 
