--- a/callbacks.html
+++ b/callbacks.html
@@ -1,13 +1,14 @@
 <!--
 <script>
     function fun_one(arg1){
-        console.log(arg1)
         console.log( arg1() );
-    }
+    };
+
     function fun_two(){
-        return "welcome to callbacks";
-    }
-    fun_one( fun_two );
+        return "Hello";
+    };
+
+    fun_one(fun_two);                   //Hello
 </script>
 -->
 
@@ -17,42 +18,31 @@
     function fun_one(arg1,arg2,arg3){
         console.log( arg1(), arg2(), arg3() );
     };
-    fun_one( function fun_two(){
+
+    function fun_two(){
         return "Hello_1";
-    }, function fun_three(){
-        return "Hello_2";
-    }, function fun_four(){
-        return "Hello_3";
-    } );                                //Hello_1 Hello_2 Hello_3
-</script>
--->
-
-
-<!--
-<script>
-   function fun_one(arg1){
-        return arg1("Hello_1");
-   };
-
-   fun_one( function fun_two(arg1){
-       console.log(arg1);
-   } );                                     //Hello_1
-</script>
--->
-
-<!--
-<script>
-    function fun_one(arg1,arg2,arg3){
-        return arg1("Hello_1")+"......."+arg2("Hello_2")+"....."+arg3("Hello_3");
     }
 
-    fun_one(function fun_two(arg1){
-        console.log(arg1);                          //Hello_1
-    }, function fun_three(arg1){
-        console.log(arg1);                          //Hello_2
-    }, function fun_four(arg1){
-        console.log(arg1);                          //Hello_3
-    });
+    function fun_three(){
+        return "Hello_2";
+    }
+
+    function fun_four(){
+        return "Hello_3";
+    }
+
+    fun_one( fun_two , fun_three, fun_four );               //Hello_1 Hello_2 Hello_3
+</script>
+-->
+
+<!--
+<script>
+    function fun_one(arg1){
+        console.log( arg1() );
+    };
+    fun_one( function fun_two(){
+        return "Hello";
+    } );                            //Hello
 </script>
 -->
 
@@ -60,30 +50,107 @@
 <!--
 <script>
     function fun_one(arg1){
-        return arg1( fun_three );
+        return arg1("Hello");
     };
-    function fun_two(arg2){
-        return arg2("Hello");
-    };
-    function fun_three(arg3){
-        console.log(arg3);
-    }
-    fun_one( fun_two );                         //Hello
+
+    fun_one( function fun_two(param1){
+        console.log(param1);
+    } );                        //Hello
 </script>
 -->
 
+
+<!--
 <script>
-   function calc(num,add){
-        return add(num+5,false);
-   };
-   function addition(addRes,error){
-        if(!error){
-            console.log(addRes);                   
-        }
-   };
-  
-   calc(5, addition);
+    function fun_one(arg1,arg2,arg3){
+        return arg1("Hello_1")+"...."+arg2("Hello_2")+"...."+arg3("Hello_3");
+    };
+
+    fun_one( function fun_two(param1){
+        console.log(param1);
+    }, function fun_three(param2){
+        console.log(param2);
+    }, function fun_four(param3){
+        console.log(param3);
+    } );
 </script>
+-->
+
+<!--
+<script>
+    function fun_one(posRes,errRes){
+        return posRes("success")+"...."+errRes("error");
+    };
+
+    fun_one( (param1)=>{
+        console.log(param1);
+    }, (param2)=>{
+        console.log(param2);
+    } );
+</script>
+-->
+
+
+<script>
+    let calc = (num,add)=>{
+        return add(num+5,false);
+    };
+
+    let sub = (num,callback)=>{
+        return callback(num-3,false);
+    }
+    
+    let mul = (num,callback)=>{
+        return callback(num*2, false);
+    };
+
+    let div = (num,callback)=>{
+        return callback((num/2)+3,false);
+    };
+
+    calc(5,(addRes,error)=>{
+        if(!error){
+           sub(addRes,(subRes,error)=>{
+                if(!error){
+                    mul(subRes,(mulRes,error)=>{
+                        if(!error){
+                            div(mulRes,(divRes,error)=>{
+                                if(!error){
+                                    console.log(divRes);
+                                }
+                            });
+                        }
+                    });
+                }
+           });
+        }
+    });
+</script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
