--- a/json.html
+++ b/json.html
@@ -29402,7 +29402,19 @@
 
 
 
+//JSON Server
+//rest api's
+//EX.  GET, POST, PUT, DELETE,......
+//JSON Server by default running on port number "3000"
+//we will install JSON Server by using following command
+// > npm install -g json-server
+// npm Stands for node packaging manager
+// -g stands for global installation
+// we will load the data in JSON Server by using following command
+// > json-server --watch data.json
+// we will test rest api's with "Postman".
 
+//http://localhost:3000/products
 
 
 
